Log in, log out, router proteccion

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
 <nav class="blue">
   <div class="nav-wrapper">
-    <a href="#" class="brand-logo right">Universidad Javeriana</a>
-    <ul id="nav-mobile" class="left hide-on-med-and-down">
+    <a href="#" class="brand-logo center">Universidad Javeriana</a>
+    <ul id="nav-mobile" class="left hide-on-med-and-down" *ngIf="loggedIn">
       <li><a routerLink="/">Inicio</a></li>
       <li><a routerLink="crear/new">Crear Nuevo</a></li>
+      <li>{{loggedUser}}</li>
+    </ul>
+    <ul id="nav-mobile" class="right hide-on-med-and-down" *ngIf="loggedIn">
+      <li>{{loggedUser}}</li>
+      <li><a (click)="loggout()">Salir</a></li>
     </ul>
   </div>
 </nav>
