Estilos para el loggin

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="nav-wrapper">
     <a href="#" class="brand-logo center">Universidad Javeriana</a>
     <ul id="nav-mobile" class="left hide-on-med-and-down" *ngIf="loggedIn">
-      <li><a routerLink="/">Inicio</a></li>
+      <li><a routerLink="cursos">Inicio</a></li>
       <li><a routerLink="crear/new">Crear Nuevo</a></li>
       <li>{{loggedUser}}</li>
     </ul>
