--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,18 @@
-<div class="container">
-	<div class="row">
-		<div class="card blue-grey darken-1">
-				<div class="input-field col s12">
-					<input id="email" type="email" class="validate" [(ngModel)]="loginParams.email">
-					<label for="email">Email</label>
-				</div>
-				<div class="input-field col s12">
-					<input id="password" type="password" class="validate" [(ngModel)]="loginParams.password">
-					<label for="password">Contraseña</label>
-				</div>
-				<div class="col s12">
-					<button class="btn" (click)="login()">Entrar</button>
-				</div>
+<section class="form-u">
+	<div class="formBox">
+		<h4 class="center-align">
+			Iniciar Sesión
+		</h4>
+		<div class="input-field col s12">
+			<input id="email" type="email" class="validate" [(ngModel)]="loginParams.email">
+			<label for="email">Email</label>
+		</div>
+		<div class="input-field col s12">
+			<input id="password" type="password" class="validate" [(ngModel)]="loginParams.password">
+			<label for="password">Contraseña</label>
+		</div>
+		<div class="col s12">
+			<button class="btn" (click)="login()">Entrar</button>
 		</div>
 	</div>
-</div>
+</section>
