--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,67 @@
 /* You can add global styles to this file, and also import other style files */
-agm-map {
-  height: 300px;
+html {
+	font-family: 'Open Sans', sans-serif;
+}
+h1 {
+	font-size: 3em;
+	color: #002046;
+}
+h2 {
+	font-size: 2em;
+	color: #002046;
+}
+
+.blue {
+	background-color: #002046 !important;
+}
+.form-u {
+	width: 100%;
+	height: calc(100vh - 63px);
+	background-color: #002046;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.formBox {
+	max-width: 100%;
+	width: 400px;
+	background-color: #fff;
+	border-radius: 8px;
+	padding: 2em 1em;
+	-webkit-box-shadow: 1px 1px 16px 1px rgba(255,255,255,0.69);
+	-moz-box-shadow: 1px 1px 16px 1px rgba(255,255,255,0.69);
+	box-shadow: 1px 1px 16px 1px rgba(255,255,255,0.69);
+}
+.btn {
+	width: 100%;
+}
+
+
+/* label color */
+.input-field label {
+	color: #002046;
+}
+/* label focus color */
+.input-field input[type=text]:focus + label {
+	color: #ffe100;
+}
+/* label underline focus color */
+.input-field input[type=text]:focus {
+	border-bottom: 1px solid #ffe100;
+	box-shadow: 0 1px 0 0 #ffe100;
+}
+/* valid color */
+.input-field input[type=text].valid {
+	border-bottom: 1px solid #ffe100;
+	box-shadow: 0 1px 0 0 #ffe100;
+}
+/* invalid color */
+.input-field input[type=text].invalid {
+	border-bottom: 1px solid #000;
+	box-shadow: 0 1px 0 0 #000;
+}
+/* icon prefix focus color */
+.input-field .prefix.active {
+	color: #000;
 }
