--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,12 @@
-<nav class="blue">
+<nav class="indigo darken-3 z-depth-4">
   <div class="nav-wrapper">
     <a href="#" class="brand-logo center">Universidad Javeriana</a>
     <ul id="nav-mobile" class="left hide-on-med-and-down" *ngIf="loggedIn">
-      <li><a routerLink="cursos">Inicio</a></li>
+      <li><a routerLink="/">Inicio</a></li>
       <li><a routerLink="crear/new">Crear Nuevo</a></li>
-      <li>{{loggedUser}}</li>
     </ul>
     <ul id="nav-mobile" class="right hide-on-med-and-down" *ngIf="loggedIn">
-      <li>{{loggedUser}}</li>
+      <li><a>{{loggedUser}}</a></li>
       <li><a (click)="loggout()">Salir</a></li>
     </ul>
   </div>
