--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -1,26 +1,23 @@
-<div class="container">
-	<div class="row">
-		<div class="col s12">
-			<h1>
-				Bienvenido
-			</h1>
-			<h4>
-				Lista de Cursos
-			</h4>
-		</div>
-		<div class="col s12">
-			<a class="btn" routerLink="/crear/new">
-				Crear Nuevo Curso
-			</a>
-		</div>
-		<div class="col s12">
-			<div class="collection">
-				<ng-container *ngFor="let curso of cursos">
-					<a routerLink="/crear/{{curso.id}}" class="collection-item">
-						<span class="badge">1</span> {{curso.nombre}}
-					</a>
-				</ng-container>
+<section class="cursos indigo lighten-5">
+	<div class="container">
+		<div class="row">
+			<div class="col s12">
+				<h4>
+					Lista de cursos
+				</h4>
 			</div>
+			<ul class="collection">
+				<ng-container *ngFor="let curso of cursos">
+					<li class="collection-item avatar">
+						<span class="title">{{curso.nombre}}</span>
+						<p class="inf"><span *ngIf="curso.activo">Activo</span>
+							<span *ngIf="!curso.activo">Inactivo</span><br>
+							Fecha de cierre: {{curso.fechafin}}
+						</p>
+						<a routerLink="/crear/{{curso.id}}" class="secondary-content editIcon"><i class="material-icons">create</i></a>
+					</li>
+				</ng-container>
+			</ul>
 		</div>
 	</div>
-</div>
+</section>
