--- a/src/app/singin/singin.component.html
+++ b/src/app/singin/singin.component.html
@@ -1,19 +1,18 @@
-<div class="container">
-	<div class="row">
-		<div class="card blue-grey darken-1">
-			
-			<div class="input-field col s12">
-				<input id="email" type="email" class="validate" [(ngModel)]="registro.email">
-				<label for="email">Email</label>
-			</div>
-			<div class="input-field col s12">
-				<input id="password" type="password" class="validate" [(ngModel)]="registro.password">
-				<label for="password">Contraseña</label>
-			</div>
-			<div class="col s12">
-				<button class="btn" (click)="registrar()">Registrar</button>
-			</div>
-
+<section class="form-u indigo darken-4">
+	<div class="formBox z-depth-3 indigo darken-2">
+		<h4 class="center-align">
+			Agregar Usuario
+		</h4>
+		<div class="input-field col s12">
+			<input id="email" type="email" class="validate" [(ngModel)]="registro.email">
+			<label for="email">Email</label>
+		</div>
+		<div class="input-field col s12">
+			<input id="password" type="password" class="validate" [(ngModel)]="registro.password">
+			<label for="password">Contraseña</label>
+		</div>
+		<div class="col s12">
+			<button class="btn indigo accent-3" (click)="registrar()">Agregar</button>
 		</div>
 	</div>
-</div>
+</section>
