--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,6 @@ h2 {
 .form-u {
 	width: 100%;
 	height: calc(100vh - 63px);
-	background-color: #002046;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -26,21 +25,19 @@ h2 {
 .formBox {
 	max-width: 100%;
 	width: 400px;
-	background-color: #fff;
 	border-radius: 8px;
-	padding: 2em 1em;
-	-webkit-box-shadow: 1px 1px 16px 1px rgba(255,255,255,0.69);
-	-moz-box-shadow: 1px 1px 16px 1px rgba(255,255,255,0.69);
-	box-shadow: 1px 1px 16px 1px rgba(255,255,255,0.69);
-}
-.btn {
-	width: 100%;
+	padding: 2em 2em;
 }
 
-
+.formBox h4 {
+	color: #e8eaf6;
+}
 /* label color */
 .input-field label {
-	color: #002046;
+	color: #e8eaf6;
+}
+input {
+	border-bottom: 1px solid #e8eaf6  !important;
 }
 /* label focus color */
 .input-field input[type=text]:focus + label {
