--- a/src/app/crear/crear.component.html
+++ b/src/app/crear/crear.component.html
@@ -58,7 +58,7 @@
 						<input id="img" type="text" class="validate" [(ngModel)]="curso.img" placeholder="Nombre del archivo">
 					</div>
 					<div class="col s12 m2">
-						<a target="_blank" href="#" class="btn indigo accent-3">
+						<a href="/upload" target="_blank" class="btn indigo accent-3">
 							Cargar
 						</a>
 					</div>
