--- a/src/app/crear/crear.component.html
+++ b/src/app/crear/crear.component.html
@@ -26,6 +26,10 @@
 						</option>
 					</select>
 				</div>
+				<div class="input-field col s6">
+					<p>Número de extensión</p>
+					<input id="extension" type="number" class="validate" [(ngModel)]="curso.extension" placeholder="Número de extensión">
+				</div>
 			</div>
 			<div class="input-field col s6">
 				<p>Nombre del Curso</p>
