Configuracion de urlpersonlizada

--- a/src/app/crear/crear.component.css
+++ b/src/app/crear/crear.component.css
@@ -19,3 +19,9 @@ input, textarea{
 	line-height: 2.5rem;
 	background-color: #c5cae9;
 }
+.active {
+	display: block;
+}
+.inactive{
+	display: none;
+}
