--- a/src/app/singin/singin.component.html
+++ b/src/app/singin/singin.component.html
@@ -4,11 +4,11 @@
 			Agregar Usuario
 		</h4>
 		<div class="input-field col s12">
-			<input id="email" type="email" class="validate" [(ngModel)]="registro.email">
+			<input id="email" type="email" class="validate" placeholder="Ingresa tu Email" [(ngModel)]="registro.email">
 			<label for="email">Email</label>
 		</div>
 		<div class="input-field col s12">
-			<input id="password" type="password" class="validate" [(ngModel)]="registro.password">
+			<input id="password" type="password" class="validate" placeholder="Ingresa tu Contraseña" [(ngModel)]="registro.password">
 			<label for="password">Contraseña</label>
 		</div>
 		<div class="col s12">
