--- a/src/styles.css
+++ b/src/styles.css
@@ -37,7 +37,7 @@ h2 {
 	color: #e8eaf6;
 }
 input {
-	border-bottom: 1px solid #e8eaf6  !important;
+	/*border-bottom: 1px solid #e8eaf6  !important;*/
 }
 /* label focus color */
 .input-field input[type=text]:focus + label {
@@ -61,4 +61,7 @@ input {
 /* icon prefix focus color */
 .input-field .prefix.active {
 	color: #000;
+}
+.input-field.col label {
+    left: 0;
 }
