--- a/src/app/crear/crear.component.html
+++ b/src/app/crear/crear.component.html
@@ -28,7 +28,7 @@
 				</div>
 				<div class="input-field col s12 m6">
 					<p>Número de extensión</p>
-					<input id="extension" type="number" class="validate" [(ngModel)]="curso.extension" placeholder="Número de extensión">
+					<input id="extension" type="text" class="validate" [(ngModel)]="curso.extension" placeholder="Número de extensión">
 				</div>
 				<div class="input-field col s12" [ngClass]="status ? 'inactive' : 'active'">
 					<p>Configuración de la Url</p>
@@ -73,12 +73,12 @@
 			<div class="input-field col s12">
 				<p>Contenido del curso</p>
 				<div class="collection">
-					<div class="collection-item" *ngFor="let item of items">
+					<div class="collection-item" *ngFor="let el of items">
 						<span class="badge">
-							<a class="btn-floating btn-tiny waves-effect waves-light red" (click)="removeItem(item)">
+							<a class="btn-floating btn-tiny waves-effect waves-light red" (click)="removeItem(el)">
 								<i class="material-icons">close</i></a>
 							</span>
-							{{item.item}}
+							{{el}}
 						</div>
 					</div>
 					<div class="row">
